# n-l476rg

./: .gitignore  .gitmodules  CMakeLists.txt
app/: CMakeLists.txt
app/inc/controllers/: mainController.h
app/inc/drivers/: uartDriver.h
app/src/controllers/: mainController.c
app/src/drivers/: uartDriver.c
cmake/: Findtoolchain.cmake
config/: .config  .config.old  CMakeLists.txt  FreeRTOSConfig.h  Kconfig  config.h  config.h.in
config/controllers/: Kconfig
config/drivers/: Kconfig
config/jlink/: erase.jlink  flash.jlink
config/services/: Kconfig
lib/: CMakeLists.txt
lib/SEGGER/: CMakeLists.txt
lib/SEGGER/SystemView_Src_V354/SEGGER/: SEGGER_SYSVIEW_ConfDefaults.h
lib/STM32L476xx/: CMakeLists.txt
lib/STM32L476xx/core/inc/: stm32l4xx_it.h
lib/STM32L476xx/core/src/: freertos.c  stm32l4xx_it.c
lib/utilities/: CMakeLists.txt
lib/utilities/queue/: queue.c  queue.h
utils/misc/rtos-curse-code/: .cproject  .mxproject  STM32L476-FreeRTOS.ioc  STM32L476-FreeRTOS.launch
utils/misc/rtos-curse-code/Core/Inc/: main.h  stm32l4xx_it.h
utils/misc/rtos-curse-code/Core/Src/: led_effect.c  stm32l4xx_it.c  task_handler.c
utils/misc/rtos-old/: CMakeLists.txt  Findtoolchain.cmake
utils/misc/rtos-old/Core/Inc/: FreeRTOSConfig.h  main.h
utils/misc/rtos-old/Core/Src/: freertos.c  main.c  stm32l4xx_hal_msp.c  syscalls.c
utils/misc/rtos-old/Drivers/: CMakeLists.txt
utils/misc/rtos-old/Libraries/FreeRTOS/: CMakeLists.txt  tasks.c
utils/misc/rtos-old/Libraries/SEGGER/: CMakeLists.txt
utils/misc/rtos-old/Libraries/SEGGER/Config/: SEGGER_SYSVIEW_Config_FreeRTOS.c
utils/misc/rtos-old/Libraries/SEGGER/SEGGER/: SEGGER_SYSVIEW_ConfDefaults.h
