set(SEGGER "SEGGER")

set(SYSVIEW "SystemView_Src_V354")

add_library(${SEGGER} STATIC)

target_sources(${SEGGER} PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/${SYSVIEW}/Sample/FreeRTOSV11/Config/Cortex-M/SEGGER_SYSVIEW_Config_FreeRTOS.c
    ${CMAKE_CURRENT_SOURCE_DIR}/${SYSVIEW}/Sample/FreeRTOSV11/SEGGER_SYSVIEW_FreeRTOS.c

    ${CMAKE_CURRENT_SOURCE_DIR}/${SYSVIEW}/SEGGER/SEGGER_RTT_ASM_ARMv7M.S
    ${CMAKE_CURRENT_SOURCE_DIR}/${SYSVIEW}/SEGGER/SEGGER_RTT.c
    ${CMAKE_CURRENT_SOURCE_DIR}/${SYSVIEW}/SEGGER/SEGGER_RTT_printf.c
    ${CMAKE_CURRENT_SOURCE_DIR}/${SYSVIEW}/SEGGER/SEGGER_SYSVIEW.c
    ${CMAKE_CURRENT_SOURCE_DIR}/${SYSVIEW}/SEGGER/Syscalls/SEGGER_RTT_Syscalls_GCC.c
)

target_include_directories(${SEGGER} PUBLIC

    ${CMAKE_CURRENT_SOURCE_DIR}/${SYSVIEW}/Config
    ${CMAKE_CURRENT_SOURCE_DIR}/${SYSVIEW}/Sample/FreeRTOSV11
    ${CMAKE_CURRENT_SOURCE_DIR}/${SYSVIEW}/SEGGER
)

target_compile_definitions(${SEGGER} PRIVATE
)

target_link_libraries(${SEGGER} PRIVATE
    freertos_kernel
    freertos_config
)
