set(SEGGER_LIBRARY "SEGGER")

add_library( ${SEGGER_LIBRARY} STATIC

)

target_sources( ${SEGGER_LIBRARY} PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/Config/SEGGER_SYSVIEW_Config_FreeRTOS.c

    ${CMAKE_CURRENT_SOURCE_DIR}/OS/SEGGER_SYSVIEW_FreeRTOS.c

    ${CMAKE_CURRENT_SOURCE_DIR}/SEGGER/SEGGER_RTT.c
    ${CMAKE_CURRENT_SOURCE_DIR}/SEGGER/SEGGER_RTT_printf.c
    ${CMAKE_CURRENT_SOURCE_DIR}/SEGGER/SEGGER_SYSVIEW.c
    ${CMAKE_CURRENT_SOURCE_DIR}/SEGGER/SEGGER_RTT_ASM_ARMv7M.S

    ${CMAKE_CURRENT_SOURCE_DIR}/SEGGER/Syscalls/SEGGER_RTT_Syscalls_GCC.c
)

target_include_directories( ${SEGGER_LIBRARY} PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/Config

    ${CMAKE_CURRENT_SOURCE_DIR}/OS

    ${CMAKE_CURRENT_SOURCE_DIR}/SEGGER

    ${CMAKE_CURRENT_SOURCE_DIR}/../FreeRTOS/include
    ${CMAKE_CURRENT_SOURCE_DIR}/../FreeRTOS/portable/GCC/ARM_CM4F

    ${CMAKE_CURRENT_SOURCE_DIR}/../../Core/Inc
)

target_compile_options( ${SEGGER_LIBRARY} PRIVATE
    -Wall
    -fstack-usage
)

target_compile_definitions( ${SEGGER_LIBRARY} PRIVATE
    STM32L476xx 
    USE_HAL_DRIVER
)
